--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   },
