--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
