--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "history": "^5.3.0",
+    "loadsh": "^0.0.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
