--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.14",
+    "validator": "^13.12.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
